Quorum3/Library/Tests/TypeCheckerGenerated/Pass/RetAssignNumberInteger.quorum
class Main
    action Main
        number v = Test()
        if v = 5.0
            output "passed"
        end
    end

    action Test() returns number
        integer var = 5
        return var
    end
end