Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBoolObjIntegerField.quorum
class Main
    Boolean v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Boolean
        integer var = 5
        return var
    end
end